--- a/src/components/home/session03/HomeSession03.css
+++ b/src/components/home/session03/HomeSession03.css
@@ -75,53 +75,19 @@
   width: 270px;
   height: 300px;
   border-radius: 10px;
-  padding: 1.5rem;
+  padding: 1rem;
   text-align: center;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
   display: flex;
-  flex-direction: column;
-}
-
-.testimonial-card p {
-  margin-top: 2rem;
-  font-size: 1rem;
-  text-align: left;
-  color: #002a5b;
-  margin-left: 2px;
-}
-
-.card-header {
-  display: flex;
-  flex-direction: row;
   align-items: center;
-  position: relative;
+  justify-content: center;
 }
 
-.testimonial-avatar {
-  width: 50px;
-  height: 50px;
-  background-color: #ccc;
-  border-radius: 50%;
-  flex-shrink: 0;
-}
-
-.card-header h4 {
-  font-size: 1.2rem;
-  font-weight: 550;
-  color: #1a2d57;
-  margin: 0;
-  flex-grow: 1
-}
-
-.highlight {
-  width: 100%;
-  height: 5px;
-  background-color: #d4af37;
-  position: absolute;
-  bottom: -20px;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 2px;
+.testimonial-card img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  border-radius: 10px;
 }
 
 @media (max-width: 1000px) {
