--- a/src/components/home/session03/HomeSession03.css
+++ b/src/components/home/session03/HomeSession03.css
@@ -25,6 +25,8 @@
   align-items: center;
   justify-content: space-between;
   position: relative;
+  overflow: hidden;
+  padding: 10px
 }
 
 .carousel-button {
@@ -39,17 +41,14 @@
   cursor: pointer;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  z-index: 10;
 }
 
 .carousel-button i {
   color: #333;
-  font-size: 16px;
-}
-
-.carousel-button:hover {
-  transform: scale(1.1);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  font-size: 13px;
 }
 
 .carousel-button.left {
@@ -66,6 +65,7 @@
   gap: 2rem;
   overflow: hidden;
   width: 100%;
+  height: 100%;
   justify-content: center;
 }
 
@@ -86,7 +86,7 @@
 .testimonial-card img {
   max-width: 100%;
   max-height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 10px;
 }
 
@@ -101,5 +101,22 @@
     height: 280px;
   }
 }
+
+@media (max-width: 768px) {
+  .testimonial-card {
+    width: 75%;
+    height: auto;
+    margin: 0 1rem;
+  }
+
+  .carousel-button.left {
+    left: 10px;
+  }
+
+  .carousel-button.right {
+    right: 10px;
+  }
+}
+
 
 
