--- a/src/components/faq/Faq.css
+++ b/src/components/faq/Faq.css
@@ -17,7 +17,7 @@
 }
 
 .faq-header-title {
-  margin: 5rem 0;
+  margin: 3rem 0;
   font-size: 2rem;
   font-weight: bold;
   color: #f5f5f5;
@@ -28,13 +28,26 @@
   justify-content: center;
   gap: 5rem;
   color: #ffffff;
-  border-radius: 10px;
-  margin: 0 10rem;
+  margin: 0 5rem;
   padding: 0 10rem;
 }
 
 .faq-left {
   flex: 1;
+}
+
+.faq-right {
+  flex: 1.5;
+  background-color: #002a5b;
+  padding: 1.5rem;
+  border-radius: 8px;
+  min-height: 200px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  color: #f5f5f5;
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 .faq-list {
@@ -47,12 +60,10 @@
 
 .faq-item {
   padding: 1rem;
-  gap: 20px;
   border-radius: 8px;
   cursor: pointer;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   background-color: #002a5b;
   color: #f5f5f5;
   transition: all 0.3s ease;
@@ -67,43 +78,51 @@
   color: #001f3f;
 }
 
-.faq-arrow {
-  font-size: 1.2rem;
-  color: #f5f5f5;
-  cursor: pointer;
-  transition: color 0.3s ease;
-}
-
-.faq-arrow:hover {
-  color: #f5a623;
-}
-
-.faq-right {
-  flex: 1.5;
-  background-color: #002a5b;
-  padding: 1.5rem;
-  border-radius: 8px;
-  min-height: 200px;
+.faq-question {
   display: flex;
-  align-items: self-start;
-  justify-content: center;
-  color: #f5f5f5;
-  font-size: 1rem;
-  line-height: 1.5;
+  justify-content: space-between;
+  font-weight: bold;
 }
 
-@media (max-width: 1550px) {
-  .faq {
-    margin: 0 5rem;
-    padding: 0 5rem;
-    padding-bottom: 3rem;
-  }
+.faq-answer-mobile {
+  display: none;
+  margin-top: 1rem;
+  font-size: 0.95rem;
+  color: #f5f5f5;
+}
+
+.show-arrow {
+  transform: rotate(90deg);
+}
+
+.hide-arrow {
+  transform: rotate(0deg);
 }
 
 @media (max-width: 800px) {
   .faq {
     flex-direction: column;
-    padding: auto;
-    margin: auto;
+    margin: 0 1rem;
+    padding: 0;
+  }
+
+  .faq-right {
+    display: none;
+  }
+
+  .faq-answer-mobile {
+    display: block;
+  }
+
+  .faq-item:last-child {
+    margin-bottom: 3rem;
+  }
+
+  .show-arrow {
+    transform: rotate(180deg);
+  }
+
+  .hide-arrow {
+    transform: rotate(90deg);
   }
 }
