--- a/src/components/home/banner/Banner.css
+++ b/src/components/home/banner/Banner.css
@@ -7,6 +7,8 @@
   position: relative;
   background-color: #f0f0f0;
   overflow: hidden;
+  padding: 0;
+  margin: 0;
 }
 
 .banner-image {
@@ -20,37 +22,75 @@
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 15%;
+  width: 13%;
   max-width: 200px;
   height: auto;
   z-index: 1;
 }
 
+.crypto-ticker {
+  display: flex;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0 2rem;
+  position: relative;
+  width: 100%;
+  height: auto;
+  margin-top: -5px;
+}
+
+.crypto-ticker-content {
+  display: inline-flex;
+  animation: ticker-move 20s linear infinite;
+  white-space: nowrap;
+}
+
+.crypto-item {
+  display: inline-flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.5rem 1rem;
+  min-width: 200px;
+}
+
+@keyframes ticker-move {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 @media (max-width: 1000px) {
   .banner-container {
     margin-top: 1rem;
-    height: 40vh;
+    height: 50vh;
   }
 
   .banner-logo {
     top: 45%;
-    left: 51%;
-    width: 10%;
+    left: 50%;
+    width: 12%;
   }
-  
 }
 
 @media (max-width: 550px) {
   .banner-container {
-    margin-top: 4rem;
-    height: 30vh;
-    top: 70px;
+    margin-top: 22vh;
+    height: auto;
+  }
+
+  .banner-image {
+    object-fit: contain;
   }
 
   .banner-logo {
-    top: 45%;
-    left: 51%;
+    left: 52%;
     width: 10%;
   }
-  
+}
+
+.crypto-info {
+  margin-top: 0;
 }
