--- a/src/components/about/session01/AboutSession01.css
+++ b/src/components/about/session01/AboutSession01.css
@@ -4,8 +4,8 @@
   padding: 30px 10px;
   background-color: #001f3f;
   color: white;
-  /* gap: 10px; */
-  /* height: 650px; */
+  gap: 10px;
+  height: 650px;
 }
 
 .timeline {
@@ -72,11 +72,11 @@
 }
 
 .about-carousel-button.left {
-  left: 20%;
+  left: 10%;
 }
 
 .about-carousel-button.right {
-  right: 20%;
+  right: 10%;
 }
 
 .bitcoin {
