adicionando hover nas imagens de feedback dos clientes

--- a/src/components/home/session03/HomeSession03.css
+++ b/src/components/home/session03/HomeSession03.css
@@ -88,6 +88,12 @@
   max-height: 100%;
   object-fit: cover;
   border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+
+.testimonial-card:hover img {
+  transform: scale(1.4);
+  z-index: 20;
 }
 
 @media (max-width: 1000px) {
